Add basic tests for inspection